--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,24 @@ log/
 *.log
 # Mac
 .DS_Store
-#vendor
-vendor/
 #composer
 *.lock
+/.phpunit.cache
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.vscode
